--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
+### Build ###
+target/
+build/
+
+### Maven ###
+.mvn/wrapper/maven-wrapper.jar
+
+### IDEs ###
 .apt_generated
 .classpath
 .factorypath
@@ -14,7 +17,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -25,9 +28,22 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
+
+### Logs ###
+*.log
+
+### Local configs ###
+application-local.properties
+application-local.yml
+
+### OS ###
+.DS_Store
+Thumbs.db
+
+### Temp ###
+*.tmp
+*.swp
+*.bak
